[gd_scene load_steps=18 format=3 uid="uid://dgq6syw2qe32p"]

[ext_resource type="Script" uid="uid://bxu41q8tb6kv5" path="res://scenes/ui/menus/pause_menu.gd" id="1_a3xc8"]
[ext_resource type="Script" uid="uid://cg8iv8veotlm8" path="res://scripts/menus/menu_stack.gd" id="2_sn3bg"]
[ext_resource type="Script" uid="uid://cfidra8l63jcf" path="res://scripts/menus/menu.gd" id="3_rdfhy"]
[ext_resource type="Texture2D" uid="uid://df4rjm03pymov" path="res://assets/img/hamburger-menu.png" id="4_sn3bg"]
[ext_resource type="PackedScene" uid="uid://c40xhlbq0xxj2" path="res://scenes/ui/volume_slider/volume_slider.tscn" id="4_srbt0"]
[ext_resource type="Script" uid="uid://kfj666n2xifd" path="res://scripts/menus/menu_stack_button.gd" id="5_rdfhy"]
[ext_resource type="AudioStream" uid="uid://da5oygxus6g8a" path="res://assets/audio/click.mp3" id="5_xiye5"]
[ext_resource type="Script" uid="uid://jnyn4yy8houc" path="res://scripts/menus/menu_back_button.gd" id="6_srbt0"]
[ext_resource type="AudioStream" uid="uid://d024mg5knpil1" path="res://assets/audio/wind-swipe.mp3" id="6_tt2gu"]
[ext_resource type="AudioStream" uid="uid://bko8nhioem3o2" path="res://assets/audio/wind-swipe-away.mp3" id="7_3kafx"]
[ext_resource type="Script" uid="uid://dn07iyn4dq4i4" path="res://scripts/menus/menu_quit_button.gd" id="7_xiye5"]

[sub_resource type="Animation" id="Animation_hibng"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_4xxar"]
resource_name = "transition_away_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_dbg70"]
resource_name = "transition_away_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_iox1x"]
resource_name = "transition_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_nd50l"]
resource_name = "transition_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Panel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Panel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Panel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hibng"]
_data = {
&"RESET": SubResource("Animation_hibng"),
&"transition_away_in": SubResource("Animation_4xxar"),
&"transition_away_out": SubResource("Animation_dbg70"),
&"transition_in": SubResource("Animation_iox1x"),
&"transition_out": SubResource("Animation_nd50l")
}

[node name="PauseMenu" type="Node2D" node_paths=PackedStringArray("menu_stack", "audio_click")]
process_mode = 3
script = ExtResource("1_a3xc8")
menu_stack = NodePath("MenuStack")
audio_click = NodePath("AudioClick")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="PauseTextureButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = 23.0
grow_horizontal = 0
texture_normal = ExtResource("4_sn3bg")

[node name="MenuStack" type="Node" parent="." node_paths=PackedStringArray("audio_transition_in", "audio_transition_out")]
script = ExtResource("2_sn3bg")
initial_menu = ""
audio_transition_in = NodePath("../AudioSwipe")
audio_transition_out = NodePath("../AudioSwipeAway")
metadata/_custom_type_script = "uid://cg8iv8veotlm8"

[node name="PauseMenu" type="CanvasLayer" parent="MenuStack"]
layer = 50
script = ExtResource("3_rdfhy")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/PauseMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/PauseMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -46.5
offset_right = 64.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/PauseMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("menu_stack", "to_menu", "audio_click")]
layout_mode = 2
size_flags_horizontal = 3
text = "Controls"
script = ExtResource("5_rdfhy")
menu_stack = NodePath("../../../../../../..")
to_menu = NodePath("../../../../../../../ControlsMenu")
audio_click = NodePath("../../../../../../../../AudioClick")
metadata/_custom_type_script = "uid://kfj666n2xifd"

[node name="AudioButton" type="Button" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("menu_stack", "to_menu", "audio_click")]
layout_mode = 2
size_flags_horizontal = 3
text = "Audio"
script = ExtResource("5_rdfhy")
menu_stack = NodePath("../../../../../../..")
to_menu = NodePath("../../../../../../../AudioMenu")
audio_click = NodePath("../../../../../../../../AudioClick")
metadata/_custom_type_script = "uid://kfj666n2xifd"

[node name="HSeparator" type="HSeparator" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("menu_stack", "audio_click")]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"
script = ExtResource("6_srbt0")
menu_stack = NodePath("../../../../../../..")
audio_click = NodePath("../../../../../../../../AudioClick")
metadata/_custom_type_script = "uid://jnyn4yy8houc"

[node name="QuitButton" type="Button" parent="MenuStack/PauseMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"
script = ExtResource("7_xiye5")
metadata/_custom_type_script = "uid://dn07iyn4dq4i4"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/PauseMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="AudioMenu" type="CanvasLayer" parent="MenuStack"]
layer = 50
script = ExtResource("3_rdfhy")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/AudioMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/AudioMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -81.0
offset_right = 64.5
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/AudioMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VolumeSlider" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_srbt0")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
label_text = "Music"

[node name="VolumeSlider2" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_srbt0")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bus_index = 1
label_text = "Ambience"

[node name="VolumeSlider3" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_srbt0")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bus_index = 2
label_text = "Effects"

[node name="ButtonBack" type="Button" parent="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/AudioMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="SoundtrackMenu" type="CanvasLayer" parent="MenuStack"]
visible = false
script = ExtResource("3_rdfhy")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/SoundtrackMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/SoundtrackMenu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -67.0
offset_right = 64.5
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/SoundtrackMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"

[node name="LabelCurrentTrack" type="Label" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Current Track:"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonPrev" type="Button" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<<"

[node name="ButtonToggle" type="Button" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "||"

[node name="ButtonNext" type="Button" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">>"

[node name="ButtonAudio" type="Button" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio Settings"

[node name="ButtonBack" type="Button" parent="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="ControlsMenu" type="CanvasLayer" parent="MenuStack"]
script = ExtResource("3_rdfhy")
metadata/_custom_type_script = "uid://cfidra8l63jcf"

[node name="Control" type="Control" parent="MenuStack/ControlsMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuStack/ControlsMenu/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -46.5
offset_right = 64.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuStack/ControlsMenu/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStack/ControlsMenu/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuStack/ControlsMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuStack/ControlsMenu/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuStack/ControlsMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("menu_stack", "audio_click")]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"
script = ExtResource("6_srbt0")
menu_stack = NodePath("../../../../../../..")
audio_click = NodePath("../../../../../../../../AudioClick")
metadata/_custom_type_script = "uid://jnyn4yy8houc"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuStack/ControlsMenu"]
libraries = {
&"": SubResource("AnimationLibrary_hibng")
}

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xiye5")
bus = &"Effects"

[node name="AudioSwipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tt2gu")
bus = &"Effects"

[node name="AudioSwipeAway" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3kafx")
bus = &"Effects"

[connection signal="pressed" from="CanvasLayer/PauseTextureButton" to="." method="_on_pause_texture_button_pressed"]
[connection signal="pressed" from="MenuStack/AudioMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/ButtonPrev" to="." method="_on_button_prev_pressed"]
[connection signal="pressed" from="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/ButtonToggle" to="." method="_on_button_toggle_pressed"]
[connection signal="pressed" from="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonAudio" to="." method="_on_button_audio_pressed"]
[connection signal="pressed" from="MenuStack/SoundtrackMenu/Control/Panel/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
